<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frags.account.SmartInputFragment"
    android:paddingStart="@dimen/len_20"
    android:paddingEnd="@dimen/len_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/label_smart_input_tip"
        android:textColor="@color/grey"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/len_32"
        android:paddingBottom="@dimen/len_6"
        android:background="@drawable/bottom_border_grey"
        android:layout_marginTop="@dimen/len_48">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_code"
            android:textColor="@color/grey"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/font_16"/>
        <EditText
            android:id="@+id/edit_smart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/len_32"
            android:layout_gravity="center_vertical"
            android:hint="@string/label_smart_hint"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_16"
            android:background="@null"
            android:textColor="@color/black"
            android:inputType="phone"
            android:maxLength="11"
            android:textCursorDrawable="@drawable/ic_cursor"/>


        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="@dimen/len_16"
            android:layout_height="@dimen/len_16"
            android:src="@drawable/ic_delete"
            android:layout_gravity="end|center_vertical"
            android:scaleType="centerCrop"
            android:tint="@color/grey"/>
    </FrameLayout>

    <net.qiujuer.genius.ui.widget.Button
        android:layout_marginTop="@dimen/len_40"
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_btn_bg_color_accent_44"
        android:gravity="center"
        android:text="@string/label_next"
        android:padding="@dimen/len_8"
        android:textSize="@dimen/font_16"
        android:textColor="@color/white"
        app:gTouchColor="@color/white_alpha_128"
        app:gTouchEffect="ripple"
        android:onClick="addFrag"/>

</LinearLayout>