<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".frags.account.CaptchaInputFragment"
    android:paddingStart="@dimen/len_20"
    android:paddingEnd="@dimen/len_20">
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:text="@string/label_captcha_send_tip" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_32"
            android:layout_marginTop="@dimen/len_16">
            <TextView
                android:id="@+id/tv_smart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_smart"
                android:textColor="@color/grey"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/font_16"/>

            <TextView
                android:id="@+id/tv_resend"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/label_reverse_second"
                android:textColor="@color/grey"
                android:layout_gravity="end|center_vertical"
                />
        </FrameLayout>
    </FrameLayout>


    <com.xana.acg.com.widget.phonecode.PhoneCode

        android:id="@+id/edit_captcha"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/len_40" />

</LinearLayout>