<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".frags.MusicFragment"
    android:id="@+id/ns_page">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--    轮播图-->

        <com.youth.banner.Banner
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/len_172"
            app:is_auto_play="true"
            app:image_scale_type="center_crop"
            android:layout_marginStart="@dimen/len_14"
            android:layout_marginEnd="@dimen/len_14"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/len_20"
            android:paddingBottom="@dimen/len_20">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_recom"
                    android:layout_width="@dimen/len_44"
                    android:layout_height="@dimen/len_44"
                    android:background="@drawable/ic_bg_img"
                    android:src="@drawable/ic_frag_recom"
                    android:padding="@dimen/len_10"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dis_of_text_img"
                    android:text="@string/label_day_recom"
                    android:textSize="@dimen/font_10"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <ImageView
                    android:id="@+id/iv_music_list"
                    android:layout_width="@dimen/len_44"
                    android:layout_height="@dimen/len_44"
                    android:background="@drawable/ic_bg_img"
                    android:src="@drawable/ic_frag_list"
                    android:padding="@dimen/len_10"
                    android:tint="@color/white"
                    android:contentDescription="@string/app_name" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dis_of_text_img"
                    android:text="@string/label_song_list"
                    android:textSize="@dimen/font_10"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <com.xana.acg.com.widget.PortraitView
                    android:id="@+id/pv_rank"
                    android:layout_width="@dimen/len_44"
                    android:layout_height="@dimen/len_44"
                    android:foreground="@drawable/ic_touch_fg"
                    android:background="@drawable/ic_bg_img"
                    android:src="@drawable/ic_frag_rank"
                    android:padding="@dimen/len_10"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dis_of_text_img"
                    android:text="@string/label_rank"
                    android:textSize="@dimen/font_10"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <com.xana.acg.com.widget.PortraitView
                    android:id="@+id/pv_stat"
                    android:foreground="@drawable/ic_touch_fg"
                    android:layout_width="@dimen/len_44"
                    android:layout_height="@dimen/len_44"
                    android:background="@drawable/ic_bg_img"
                    android:src="@drawable/ic_frag_channel"
                    android:padding="@dimen/len_10"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dis_of_text_img"
                    android:text="@string/label_channel"
                    android:textSize="@dimen/font_10"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">
                <com.xana.acg.com.widget.PortraitView
                    android:id="@+id/pv_live"
                    android:foreground="@drawable/ic_touch_fg"
                    android:layout_width="@dimen/len_44"
                    android:layout_height="@dimen/len_44"
                    android:background="@drawable/ic_bg_img"
                    android:src="@drawable/ic_frag_live"
                    android:padding="@dimen/len_10"
                    android:tint="@color/white"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dis_of_text_img"
                    android:text="@string/label_live"
                    android:textSize="@dimen/font_10"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@drawable/shape_border"/>

        <FrameLayout
            android:paddingStart="@dimen/len_10"
            android:paddingEnd="@dimen/len_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_16"
                android:textColor="@color/black"
                android:text="@string/label_song_recom"/>
            <TextView
                android:id="@+id/tv_music_list"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/len_24"
                android:gravity="center"
                android:paddingStart="@dimen/len_8"
                android:paddingEnd="@dimen/len_8"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"
                android:layout_gravity="end"
                android:background="@drawable/shape_border"
                android:text="@string/label_more_song_list" />
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:padding="@dimen/len_10"
            android:id="@+id/rv_song_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <FrameLayout
            android:paddingStart="@dimen/len_10"
            android:paddingEnd="@dimen/len_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_16"
                android:textColor="@color/black"
                android:text="@string/label_song_new"/>
            <TextView
                android:id="@+id/tv_new_music"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/len_24"
                android:gravity="center"
                android:paddingStart="@dimen/len_8"
                android:paddingEnd="@dimen/len_8"
                android:textColor="@color/black"
                android:textSize="@dimen/font_12"
                android:layout_gravity="end"
                android:background="@drawable/shape_border"
                android:text="@string/label_more_song_new" />
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:padding="@dimen/len_10"
            android:id="@+id/rv_new_song"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/len_20"
            android:padding="@dimen/len_10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_16"
                android:textColor="@color/black"
                android:text="@string/label_elite"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical|end"
                android:gravity="center_vertical"
                android:id="@+id/ll_refresh">
                <ImageView
                    android:layout_width="@dimen/len_12"
                    android:layout_height="@dimen/len_12"
                    android:src="@drawable/ic_refresh"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/len_24"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_12"
                    android:text="@string/label_get_new" />
            </LinearLayout>

        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_elite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>



</androidx.core.widget.NestedScrollView>